# Lexicon

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  SUPPORT.md  alembic.ini  claude.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  license-summary.md  license.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  step-by-step.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: .env.development  .env.production  .env.staging  README.md
dags/: daily_ingestion.py  monthly_phylogenetics.py  weekly_processing.py
docs/: api-reference.md  api.md  architecture.md  audit-report.md  compliance.md  contributing.md  data_model.md  faq.md  postman_collection.json  static-analysis-report.md  style-guide.md  troubleshooting.md
k8s/: kustomization.yaml
k8s/base/: namespace.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
migrations/: env.py
migrations/versions/: 20260127_0001_0001_initial_schema.py
scripts/: benchmark.py  build.bat  build.sh  bump_version.py  generate_postman.py  init-db.sql  load_initial_data.py  package.sh  release.sh  setup_databases.sh
src/: __init__.py  config.py  exceptions.py
src/adapters/: __init__.py  base.py  clld.py  corpus.py  ocr.py  wiktionary.py
src/analysis/: __init__.py  contact_detection.py  dating.py  semantic_drift.py
src/api/: __init__.py  main.py  middleware.py
src/api/graphql/: __init__.py  resolvers.py  schema.py
src/api/routes/: __init__.py  analysis.py  graph.py  lsr.py
src/models/: __init__.py  base.py  db_models.py  language.py  lsr.py  relationships.py
src/pipelines/: __init__.py  base.py  embedding.py  entity_resolution.py  relationship_extraction.py  validation.py
src/repositories/: __init__.py  lsr_repository.py
src/training/: __init__.py  classifiers.py  embeddings.py  phylogenetics.py
src/utils/: __init__.py  cache.py  common.py  db.py  embeddings.py  error_tracking.py  logging.py  metrics.py  phonetics.py  telemetry.py  validation.py
tests/: __init__.py  conftest.py
tests/acceptance/: __init__.py  test_user_stories.py  test_workflows.py
tests/fixtures/: sample_data.py
tests/integration/: test_api.py  test_pipelines.py
tests/performance/: __init__.py  test_stress.py  test_throughput.py
tests/regression/: __init__.py  test_config_validation_edge_cases.py  test_data_integrity.py  test_entity_resolution_edge_cases.py  test_lsr_edge_cases.py
tests/security/: __init__.py  test_general_security.py  test_input_validation.py  test_secrets_handling.py
tests/unit/: test_common.py  test_config.py  test_entity_resolution.py  test_exceptions.py  test_models.py  test_package_pipeline.py  test_utils.py  test_validation.py
